# stringcalc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  frets.py  pyproject.toml  tension.py
.github/workflows/: ci.yml
data/: README.md  aquila-nng-equiv.csv  aquila.py  daddario-stp.py  daddario-tension.csv  daddario-tension.txt  daddario.py  daddario_extract.py  examine-nng.py  extract-daddario.py  ghs.py  parse-daddario.py  stringjoy.py  tension-plot.py  worth-uke.csv  worth.py
docs/: api.rst  cli.rst  conf.py  index.md  panel.rst  prior-art.md
docs/examples/: compare-data.md  gauge-suggest.md  pythagoras-ratios.md  tension-plot.md
panel/: README.md  app.py  environment.yml
stringcalc/: __init__.py  cli.py  frets.py  tension.py  util.py
stringcalc/data/: __init__.py  aquila-nng.csv  daddario-stp.csv  daddario-tension.csv  ghs.csv  stringjoy.csv  worth.csv
tests/: test_frets.py  test_string.py
