[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stringcalc"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "pandas",
    "pyabc2 @ https://github.com/zmoon/PyABC2/archive/main.zip",
]

[project.urls]
Home = "https://github.com/zmoon/stringcalc"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ipython",
]
