[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "stringcalc"
authors = [{name = "zmoon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.9"
dependencies = [
    "numpy >=1.21",
    "pandas",
    "pint >=0.22",
    "pyabc2",
]

[project.urls]
Home = "https://github.com/zmoon/stringcalc"
Source = "https://github.com/zmoon/stringcalc"

[project.optional-dependencies]
test = [
    "mypy",
    "pandas-stubs",
    "pytest",
]
dev = [
    "ipython",
]
cli = [
    "rich",
    "typer",
]
doc = [
    "matplotlib",
]

[project.scripts]
stringcalc = "stringcalc.cli:app"

[tool.flit.sdist]
exclude = ["data/", ".github/", "panel/", ".gitignore"]


[tool.black]
line-length = 100

[tool.flake8]  # pyproject-flake8
max-line-length = 100
ignore = [
  "E203", # whitespace before ':' - doesn't work well with black
  "E402", # module level import not at top of file
  "E501", # line too long - let black worry about that
  "W503", # line break before binary operator
  "E226", # missing whitespace around arithmetic operator - not always more readable imho
]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
exclude = [
    "^venv/",
    "^data/",
    "^panel/",
]
install_types = true
ignore_missing_imports = true
